src/skiacapi/cpp/skiacapi.h

CAPI unsigned char SkBlendMode_Darken(void);
CAPI unsigned char SkBlendMode_Lighten(void);
CAPI unsigned char SkBlendMode_ColorDodge(void);
CAPI unsigned char SkBlendMode_ColorBurn(void);
CAPI unsigned char SkBlendMode_HardLight(void);
CAPI unsigned char SkBlendMode_SoftLight(void);
CAPI unsigned char SkBlendMode_Difference(void);
CAPI unsigned char SkBlendMode_Exclusion(void);