src/main/java/com/loadingbyte/cinecred/natives/skiacapi/skiacapi_h.java


    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Darken()
     * }
     */
    public static MemorySegment SkBlendMode_Darken$address() {
        return SkBlendMode_Darken.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Darken()
     * }
     */
    public static byte SkBlendMode_Darken() {
        var mh$ = SkBlendMode_Darken.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkBlendMode_Darken");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkBlendMode_Lighten {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkBlendMode_Lighten");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Lighten()
     * }
     */
    public static FunctionDescriptor SkBlendMode_Lighten$descriptor() {
        return SkBlendMode_Lighten.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Lighten()
     * }
     */
    public static MethodHandle SkBlendMode_Lighten$handle() {
        return SkBlendMode_Lighten.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Lighten()
     * }
     */
    public static MemorySegment SkBlendMode_Lighten$address() {
        return SkBlendMode_Lighten.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Lighten()
     * }
     */
    public static byte SkBlendMode_Lighten() {
        var mh$ = SkBlendMode_Lighten.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkBlendMode_Lighten");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkBlendMode_ColorDodge {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkBlendMode_ColorDodge");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_ColorDodge()
     * }
     */
    public static FunctionDescriptor SkBlendMode_ColorDodge$descriptor() {
        return SkBlendMode_ColorDodge.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_ColorDodge()
     * }
     */
    public static MethodHandle SkBlendMode_ColorDodge$handle() {
        return SkBlendMode_ColorDodge.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_ColorDodge()
     * }
     */
    public static MemorySegment SkBlendMode_ColorDodge$address() {
        return SkBlendMode_ColorDodge.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkBlendMode_ColorDodge()
     * }
     */
    public static byte SkBlendMode_ColorDodge() {
        var mh$ = SkBlendMode_ColorDodge.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkBlendMode_ColorDodge");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkBlendMode_ColorBurn {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkBlendMode_ColorBurn");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_ColorBurn()
     * }
     */
    public static FunctionDescriptor SkBlendMode_ColorBurn$descriptor() {
        return SkBlendMode_ColorBurn.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_ColorBurn()
     * }
     */
    public static MethodHandle SkBlendMode_ColorBurn$handle() {
        return SkBlendMode_ColorBurn.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_ColorBurn()
     * }
     */
    public static MemorySegment SkBlendMode_ColorBurn$address() {
        return SkBlendMode_ColorBurn.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkBlendMode_ColorBurn()
     * }
     */
    public static byte SkBlendMode_ColorBurn() {
        var mh$ = SkBlendMode_ColorBurn.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkBlendMode_ColorBurn");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkBlendMode_HardLight {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkBlendMode_HardLight");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_HardLight()
     * }
     */
    public static FunctionDescriptor SkBlendMode_HardLight$descriptor() {
        return SkBlendMode_HardLight.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_HardLight()
     * }
     */
    public static MethodHandle SkBlendMode_HardLight$handle() {
        return SkBlendMode_HardLight.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_HardLight()
     * }
     */
    public static MemorySegment SkBlendMode_HardLight$address() {
        return SkBlendMode_HardLight.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkBlendMode_HardLight()
     * }
     */
    public static byte SkBlendMode_HardLight() {
        var mh$ = SkBlendMode_HardLight.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkBlendMode_HardLight");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkBlendMode_SoftLight {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkBlendMode_SoftLight");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_SoftLight()
     * }
     */
    public static FunctionDescriptor SkBlendMode_SoftLight$descriptor() {
        return SkBlendMode_SoftLight.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_SoftLight()
     * }
     */
    public static MethodHandle SkBlendMode_SoftLight$handle() {
        return SkBlendMode_SoftLight.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_SoftLight()
     * }
     */
    public static MemorySegment SkBlendMode_SoftLight$address() {
        return SkBlendMode_SoftLight.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkBlendMode_SoftLight()
     * }
     */
    public static byte SkBlendMode_SoftLight() {
        var mh$ = SkBlendMode_SoftLight.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkBlendMode_SoftLight");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkBlendMode_Difference {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkBlendMode_Difference");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Difference()
     * }
     */
    public static FunctionDescriptor SkBlendMode_Difference$descriptor() {
        return SkBlendMode_Difference.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Difference()
     * }
     */
    public static MethodHandle SkBlendMode_Difference$handle() {
        return SkBlendMode_Difference.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Difference()
     * }
     */
    public static MemorySegment SkBlendMode_Difference$address() {
        return SkBlendMode_Difference.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Difference()
     * }
     */
    public static byte SkBlendMode_Difference() {
        var mh$ = SkBlendMode_Difference.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkBlendMode_Difference");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkBlendMode_Exclusion {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkBlendMode_Exclusion");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Exclusion()
     * }
     */
    public static FunctionDescriptor SkBlendMode_Exclusion$descriptor() {
        return SkBlendMode_Exclusion.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Exclusion()
     * }
     */
    public static MethodHandle SkBlendMode_Exclusion$handle() {
        return SkBlendMode_Exclusion.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Exclusion()
     * }
     */
    public static MemorySegment SkBlendMode_Exclusion$address() {
        return SkBlendMode_Exclusion.ADDR;
    }
